Исправлены ошибки. Добавлены все эффекты. Добавлены все svg.

--- a/less/footer.less
+++ b/less/footer.less
@@ -1,60 +1,87 @@
+/*  Футер   */
 .page-footer{
-    background:@main-background;
+    background: @main-background;
     position: relative;
     text-align: center;
     &__wrap{
         padding: 35px 20px;
-        display:flex;
-        flex-direction:column;
-        justify-content:space-between;
-        align-items:center;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
     }
     &__link-hashtag{
         font-size: 21px;
         line-height: 26px;
-        color:@color-link;
-    }
-    &__link-copyright{
-        &:after{
-            content:'';
-            width:45px;
-            height:45px;
-            display:inline-block;
-            vertical-align:middle;
-            fill:rgba(0,0,0,1);    
-        }
-        svg{
-            height:45px;
-            vertical-align: top;
-        }
+        color: @color-link;
         &:hover{
-            fill:rgba(129,179,210,1);
+            color: rgba(129,179,210,1);
+            transition: @transition-hover;
         }
         &:active{
-            fill:rgba(178,178,178,1);
+            color: rgba(178,178,178,1);
         }
+    }
+    &__dev{
+        display: inline-block;
+        vertical-align: middle;
+    }
+    &__link-copyright{
+            display: inline-block;
+            vertical-align: middle;
+        &:hover{
+            fill: rgba(129,179,210,1);
+            transition: @transition-hover;
+        }
+        &:active{
+            fill: rgba(178,178,178,1);
+        }
+    }
+    &__svg-copyright{
+        width: 27px;
+        height: 35px;
     }
 }
 .social-links{
     padding: 40px 0px;
     &__item{
-        width:45px;
-        height:45px;
-        display:inline-block;
-        vertical-align:top;
-        margin-left:5px;
-        background:@blue-color;
-        fill:rgba(255,255,255,1);
+        width: 45px;
+        height: 45px;
+        display: inline-block;
+        vertical-align: top;
+        margin-left: 5px;
+        background: @blue-color;
+        fill: rgba(255,255,255,1);
         svg{
             height: 45px;
         }
         &:hover{
-            background:rgba(102,158,192,1);
-            fill:rgba(255,255,255,1);
+            background: rgba(102,158,192,1);
+            fill: rgba(255,255,255,1);
+            transition: @transition-hover;
         }
         &:active{
-            background:rgba(84,150,189,1);
-            fill:rgba(136,182,209,1);
+            background: rgba(84,150,189,1);
+            fill: rgba(136,182,209,1);
         }
     }  
+}
+/*  Стили для планшета  */
+@media (min-width:@width-tablet-content){
+    .page-footer{
+        &__wrap{
+            padding: 36px 20px;
+            flex-direction: row;
+        }
+        &__item{
+            width: 33%;
+        }
+        &__dev{
+            margin: 0;
+        }
+    }
+    .social-links{
+        padding: 0px;
+        width: 33%;
+    }
 }
