--- a/less/base.less
+++ b/less/base.less
@@ -24,6 +24,7 @@ input[type="text"]{
     background:#f2f2f2;
     &:hover{
         background: rgba(229,229,229,1);
+        transition:@transition-hover;
     }
     &:active,
     &:focus{
