--- a/less/menu.less
+++ b/less/menu.less
@@ -1,55 +1,123 @@
+/*  Навигация   */
 .navigation{
-    position:relative;
+    position: relative;
     &__list{
-        display:flex;
-        flex-direction:column;
-        justify-content:center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
     &__item{
-            padding:8px 0;
-            background-color:@blue-color;
+            padding: 8px 0;
+            background-color: @blue-color;
             box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.2),
                         inset 0 -1px 0 0 rgba(100, 100, 100, 0.2);
                 -webkit-box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.2),
-                        inset 0 -1px 0 0 rgba(100, 100, 100, 0.2); 
+                                    inset 0 -1px 0 0 rgba(100, 100, 100, 0.2); 
                 -moz-box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.2),
-                        inset 0 -1px 0 0 rgba(100, 100, 100, 0.2); 
+                                 inset 0 -1px 0 0 rgba(100, 100, 100, 0.2); 
             &:nth-of-type(3){
                 display:none;
             }
             &:hover{
-                background:rgba(102,158,192,1);
+                background: rgba(102,158,192,1);
+                transition: @transition-hover;
             }
             &:active{
-                background:rgba(84,150,189,1);
-                color:rgba(148,185,210,1);
+                background: rgba(84,150,189,1);
+                color: rgba(148,185,210,1);
             }       
         }
     &__link{
-    color:@color-menu-link;
-    display:block;
-    text-align:center;
+    color: @color-menu-link;
+    display: block;
+    text-align: center;
     font-size: 18px;
     line-height: 40px;
     }
 }
 .menu-open{
-    display:block;
+    display: block;
     width: 23px;
     height: 23px;
     position: absolute;
-    background: url('../img/sprites.png') -60px -15px no-repeat ;
-    top:15px;
-    right: 20px;
-    z-index: 99;  
-}
-.menu-close{
-    display:block;
-    width: 23px;
-    height: 23px;
-    position: absolute;
-    background: url('../img/sprites.png') -15px -15px no-repeat ;
-    top:15px;
+    top: 15px;
     right: 20px;
     z-index: 99;
+    &__img{
+        fill: @blue-color;
+    }
+}
+.menu-close{
+    display: block;
+    width: 23px;
+    height: 23px;
+    position: absolute;
+    top: 15px;
+    right: 20px;
+    z-index: 99;
+    &__img{
+        fill: @color-menu-link;
+    }
+}
+/*  Стили для планшета  */
+@media (min-width:@width-tablet-content){
+    .navigation{
+        padding: 0;
+        &__list{
+            flex-direction: row;
+            justify-content: space-between;
+        }
+        &__item{
+            width: 20%;
+            display: block;
+            background: @main-background;
+            box-shadow: none;
+                -webkit-box-shadow: none;
+                -moz-box-shadow: none;
+            &:hover,
+            &:active{
+                background: @main-background;
+            }
+        }
+        &__item:nth-of-type(1){
+            order: 4;
+        }
+        &__item:nth-of-type(2){
+            order: 1;
+        }
+        &__item:nth-of-type(3){
+            display:block;
+            order: 3;
+        }
+        &__item:nth-of-type(4){
+            order: 2;
+        }
+        &__item:nth-of-type(5){
+            order: 5;
+        }
+        &__link{
+            .font-title();
+            font-size: 14px;
+            color: @color-link;
+            &:hover{
+                color: rgba(129,179,210,1);
+            }
+            &:active{
+                color: rgba(206,206,206,1);
+            }
+            &--active{
+                color: rgba(118,99,87,1);
+                &:hover{
+                    color: rgba(96,78,67,1);
+                }
+                &:active{
+                    color: rgba(219,216,213,1);
+                }
+            }
+        }
+    }
+    .menu-close,
+    .menu-open{
+        display: none;
+    }
 }
