--- a/less/mixins.less
+++ b/less/mixins.less
@@ -30,6 +30,7 @@
 .btn{
 	&:hover{
 		background:rgba(102,158,192,1);
+		transition:@transition-hover;
 	}
 	&:active{
 		background:rgba(84,150,189,1);
