--- a/less/modal-window.less
+++ b/less/modal-window.less
@@ -6,13 +6,15 @@
 }
 @media (min-width:@width-tablet-content){
 	.error{
-		position:relative;
-		display:block;
-		width:400px;
-		height:347px;
-		left:50%;
-		bottom: 952px;
-		margin-left:-200px;
+		position: fixed;
+	    display: none;
+	    width: 400px;
+	    height: 347px;
+	    left: 0;
+	    bottom: 0;
+	    right: 0;
+	    top: 0;
+	    margin: auto;
 		background:#ffffff;
 		box-shadow: 0px 0px 15px 7px rgba(0, 0, 0, 0.15);
 	            -webkit-box-shadow: 0px 0px 15px 7px rgba(0, 0, 0, 0.15);
@@ -45,13 +47,15 @@
 		}
 	}
 	.success{
-		position:relative;
-		display:block;
-		width:640px;
-		height:347px;
-		left:50%;
-		bottom: 850px;
-		margin-left:-320px;
+		position: fixed;
+	    display: none;
+	    width: 640px;
+	    height: 347px;
+	    left: 0;
+	    bottom: 0;
+	    right: 0;
+	    top: 0;
+	    margin: auto;
 		background:#ffffff;
 		box-shadow: 0px 0px 15px 7px rgba(0, 0, 0, 0.15);
 	            -webkit-box-shadow: 0px 0px 15px 7px rgba(0, 0, 0, 0.15);
