Добавлена графика для ретинных устройств

--- a/less/media-index.less
+++ b/less/media-index.less
@@ -1,8 +1,15 @@
+@media (min-resolution: 144dpi),
+		(min-resolution: 1.5 dppx){
+
+	.card{
+		background-image: url('../img/photo-background@2x.png');
+	}
+}
+
 @media (min-width:@width-tablet-content){
 	.container{
 		width:@width-tablet-content;
 	}
-	
 	.card{
 		position:relative;
 		padding-top:50px;
