--- a/less/main-index.less
+++ b/less/main-index.less
@@ -10,7 +10,8 @@ body{
             -moz-box-shadow: 0px 0px 15px 5px rgba(0,1,1,0.2);
 }
 .card{ 
-    background:url('../img/photo-background@1x.jpg') 100% 0% no-repeat;
+    background:url('../img/photo-background@1x.jpg') 100% 0%;
+    background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
     padding-top:20px;
