Исправлены ошибки и недочеты

--- a/less/header.less
+++ b/less/header.less
@@ -1,7 +1,5 @@
 .page-header{
-    background: @main-background;
-    &__wrap{   
-    }
+    background: @white-color;
 }
 /*  Логотип */
 .logo{
@@ -28,12 +26,12 @@
     }
     &__img{
         position: absolute; 
+        background-color: transparent;
         top: 0;
         left: 50%; 
     }
 }
 
-/*  Стили для планшета  */
 @media (min-width:@width-tablet-content){
     .logo{
         height: 0px;
