--- a/less/mixins.less
+++ b/less/mixins.less
@@ -19,7 +19,7 @@
 	}
 	h2{
 		display:block;
-		background:#ffffff;
+		background: @white-color;
 		z-index:2;
 		position:relative;
 		width:400px;
