--- a/less/typography.less
+++ b/less/typography.less
@@ -19,8 +19,8 @@
 
 body,html{
     font-size:14px; 
-    font-family:"PTSansBold";
-    color:@color-main-text;
+    font-family:"PTSansBold", Arial, sans-serif;
+    color: @black-color;
     text-transform: uppercase;
 }
 
@@ -30,7 +30,7 @@ h1,h2{
 }
 
 p{
-    font-family: "PTSansRegular";
+    font-family: "PTSansRegular", Arial, sans-serif;
     font-size: 14px;
     line-height: 26px;
     color:#333333;
