--- a/less/base.less
+++ b/less/base.less
@@ -18,7 +18,7 @@ p{
 }
 img{
     width:100%;
-    height: auto;
+    background: #376b93;
 }
 input{
 	outline:none;
@@ -32,7 +32,7 @@ input[type="text"]{
     }
     &:active,
     &:focus{
-        background:rgba(255,255,255,1);
+        background: @white-color;
 	    box-shadow: inset 0px 0px 1px 2px #b8b8b8;
                 -webkit-box-shadow: inset 0px 0px 1px 2px #b8b8b8;
                 -moz-box-shadow: inset 0px 0px 1px 2px #b8b8b8;
