--- a/less/footer.less
+++ b/less/footer.less
@@ -1,6 +1,6 @@
 /*  Футер   */
 .page-footer{
-    background: @main-background;
+    background: @white-color;
     position: relative;
     text-align: center;
     &__wrap{
@@ -43,21 +43,20 @@
     }
 }
 .social-links{
-    padding: 40px 0px;
+    padding: 38px 0;
     &__item{
-        width: 45px;
-        height: 45px;
+        width: 48px;
+        height: 47px;
         display: inline-block;
         vertical-align: top;
-        margin-left: 5px;
         background: @blue-color;
-        fill: rgba(255,255,255,1);
+        fill: @white-color;
         svg{
             height: 45px;
         }
         &:hover{
             background: rgba(102,158,192,1);
-            fill: rgba(255,255,255,1);
+            fill: @white-color;
             transition: @transition-hover;
         }
         &:active{
@@ -66,15 +65,18 @@
         }
     }  
 }
-/*  Стили для планшета  */
+
 @media (min-width:@width-tablet-content){
     .page-footer{
         &__wrap{
-            padding: 36px 20px;
+            padding: 33px 38px 35px;
             flex-direction: row;
         }
         &__item{
             width: 33%;
+            &--right{
+                text-align: right;
+            }
         }
         &__dev{
             margin: 0;
@@ -83,5 +85,13 @@
     .social-links{
         padding: 0px;
         width: 33%;
+    }
+}
+
+@media (min-width:@width-desktop-content){
+    page-footer{
+        &__wrap{
+            padding: 33px 45px 35px;
+        }
     }
 }
