--- a/less/main-index.less
+++ b/less/main-index.less
@@ -3,14 +3,14 @@ body{
 }
 .container{
     min-width: @width-mobile-content;
-    background:@main-background;
+    background: @white-color;
     margin: 0 auto;
     box-shadow: 0px 0px 15px 5px rgba(0,1,1,0.2);
             -webkit-box-shadow: 0px 0px 15px 5px rgba(0,1,1,0.2);
             -moz-box-shadow: 0px 0px 15px 5px rgba(0,1,1,0.2);
 }
 .card{ 
-    background:url('../img/photo-background@1x.jpg') 100% 0%;
+    background: #376b93 url('../img/photo-background@1x.jpg') 100% 0%;
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
@@ -34,23 +34,23 @@ body{
     
     &__text-tothedorgeous{
         margin-top: 8px;
-        margin-bottom: 69px;
+        margin-bottom: 52px;
         width: 196px;
         height: 24px;
         fill: rgba(118,99,87,1);
     }
     &__main-logo{
-        margin-top:28px;
-        margin-bottom:69px;
+        margin-top: 0;
+        margin-bottom:61px;
         width:280px;
         height:47px;
-        fill: rgba(255,255,255,1);
+        fill: @white-color;
     }
     &__slogan{
-        margin-bottom:37px;
+        margin-bottom: 31px;
         width: 197px;
-        height:48px;
-        fill: rgba(255,255,255,1);
+        height: 60px;
+        fill: @white-color;
     }
     &__svg-triangle{
             position: absolute;
@@ -58,14 +58,14 @@ body{
             bottom: -1px;
             left: -50%;
             width: 200%;
-            height: 36px;
+            height: 32px;
     }
 }
 
 .description{
     position: relative;
     padding-top: 22px;
-    padding-bottom: 42px;
+    padding-bottom: 45px;
     text-align: center;
     overflow: hidden;
     &__wrap{
@@ -76,11 +76,12 @@ body{
         margin-bottom: 27px;    
     }
     &__svg-triangle{
-        position:absolute;
-        width:200%;
-        bottom:0;
-        left:-50%;
-        height:36px;
+        position: absolute;
+        display: block;
+        bottom: -1px;
+        left: -50%;
+        width: 200%;
+        height: 31px;
     }
 }
 .reason{
@@ -91,33 +92,32 @@ body{
     }
     &__header{
        padding:30px 0px; 
-       color:@color-text;
+       color: @white-color;
     }
     &__title{
-        margin:10px 0;
+        margin: 8px 0;
     }
     &__number{
         line-height:21px;
-        color:@color-text;
+        color: @white-color;
     }
     &__descr-title{
         line-height:21px;
         margin-top:15px;
         margin-bottom:10px;
-        color:@color-text;
+        color: @white-color;
     }
     &__image{
         img{
-            display:block;
+            display: block;
             width:100%;
-            height: 256px;
         }
     }
 }
 
 .advantages{
     &__wrap{
-        padding: 27px 6.25% 37px 6.25%;
+        padding: 27px 6.25% 22px 6.25%;
         position: relative;
     }
     &__image{
@@ -126,18 +126,19 @@ body{
         display:inline-block;
         vertical-align: top;
         fill:@blue-color;
-        margin-right: 10px;
+        margin-right: 7px;
     }
     &__title{
         text-align:left;
         display: inline-block;
-        width: 230px;
+        vertical-align: top;
+        width: 225px;
         h2{
-            margin:14px 0;
+            margin: 12px 0;
         }
         p{
             line-height:21px;
-            margin-bottom:14px;
+            margin-bottom: 18px;
         }
     }
 }
@@ -156,7 +157,7 @@ body{
         border-bottom: none;
     }
     &__title{
-        margin-top:14px;
+        margin-top:12px;
         margin-bottom:10px;
     }
     &__number{
@@ -164,14 +165,14 @@ body{
     }
     &__descr-title{
         line-height:21px;
-        margin:14px 0;
+        margin:13px 0;
     }
 }
 .offer{
     &__wrap{
         padding:0px 6.25% 45px 6.25%;
         text-align: center;
-        margin-top:30px;
+        margin-top: 27px;
     }
     &__title{
         font-size: 21px;
@@ -180,14 +181,15 @@ body{
     &__text{
         font-size:14px;
         line-height: 24px;
+        margin-top: 21px;
+        margin-bottom: 35px;
     }
     &__btn{
         font-size: 21px;
-        color:@color-text;
-        margin-top:40px;
+        color: @white-color;
         display:block;
         background: @blue-color;
-        padding:18px 10px;
+        padding:16px 10px;
         text-align: center;
         .btn();
     }
@@ -196,5 +198,6 @@ body{
 .map{
     width: 100%;
     height: 350px;
-    background: url('https://api-maps.yandex.ru/services/constructor/1.0/static/?sid=owLTVsyuF1M94FxGi1W_8FaRu9UHPLpZ&width=600&height=450&lang=ru_RU&sourceType=constructor') 50% no-repeat;
+    background: #376b93 url('../img/map.png') 100% 0% no-repeat;
+    background-size: cover;
 }
