--- a/less/media-form.less
+++ b/less/media-form.less
@@ -1,8 +1,10 @@
 @media (min-width:@width-tablet-content){
 	.card{
-	    &__main-logo--min{
-	        width:457px;
-	        height:75px;
+	    &__main-logo-form{
+	        height: 80px;
+		    margin-top: 51px;
+		    width: 459px;
+		    margin-bottom: 52px;
 	    }
 	}
 	
@@ -10,17 +12,17 @@
 		border:none;
 		padding:0 7.7%;
 		&__wrap{
-			padding:71px 0 65px 0;
+			padding: 33px 0 55px;
 			width:68%;
 			margin:0 auto;
 		}
 		&__title{
-			margin:0;
+			margin-top: 40px;
 			font-size:30px;
 			line-height:26px;
 		}
 		&__descr{
-			margin-top:38px;
+			margin-top: 30px;
 			margin-bottom:0;
 			line-height:26px;
 		}
@@ -32,27 +34,25 @@
 		&__title{
 			.line-text();
 			margin-top:0;
-			margin-bottom:38px;
+			margin-bottom: 25px;
 		}
 	}
 	.person-data{
 		border:none;
-		padding-bottom:70px;
+		padding-bottom: 65px;
 		&__wrap{
 		    padding: 0;
+		    margin-bottom: 0;
 		    flex-direction: row;
 		    justify-content: space-between;
 		}
 		&__name{
 			width: 27.1%;
 		}
-		label{
-			margin-bottom:15px;	
-		}
 		input[type="text"]{
 			width: 77.2%;
-			padding: 18px 11.4%;
-			margin:0;
+			margin: 10px 0 0;
+    		padding: 17px 11.4%;
 		}
 	}
 	.impression{
@@ -66,8 +66,8 @@
 		}
 		&__list{
 			flex-direction: row;
-    		margin-top: 46px;
-    		margin-bottom:58px;
+    		margin-top: 40px;
+    		margin-bottom: 51px;
     		justify-content: space-between;
     		align-items: stretch;
 		}
@@ -77,7 +77,7 @@
 		}
 	}
 	.info-travel{
-		padding-bottom:70px;
+		padding-bottom: 61px;
 		border:none;
 		&__wrap{
 			padding:0px;
@@ -94,9 +94,14 @@
 		}
 		&__item{
 			width:27.1%;
+			label{
+				margin-bottom: 10px;
+    			margin-left: 22px;
+    			margin-top: 25px;
+			}
 			input[type="text"]{
 				width: 77.2%;
-    			padding: 18px 11.4%;
+    			padding: 17px 11.4%;
     			height: 22px;
     			margin: 0;
 			}
@@ -106,6 +111,11 @@
 	.quantity{
 		width:27.1%;
 		margin: 0 auto;
+		label{
+			margin-bottom: 10px;
+			margin-left: 22px;
+			margin-top: 25px;
+		}
 		&__input{
 	        left: 61px;
 	        right: 61px;
@@ -119,7 +129,7 @@
 		}
 	}
 	.number-person{
-	    margin-bottom: 35px;
+	    margin-bottom: 25px;
 		&__wrap{
 			padding:0px;
 		}
@@ -128,27 +138,40 @@
 			.line-text();
 		}
 		.quantity{
+			width: 31.1%;
 			label{
 				margin-left:0;
-				margin-top: 38px;
-    			margin-bottom: 15px;
+				margin-top: 25px;
+    			margin-bottom: 10px;
     			text-align:center;
     			
+			}
+			&__control{
+				width: 175px;
+				margin: 0 auto;
 			}
 		}
 	}
 	.data-travel{
-		padding-bottom:72px;
+		padding-bottom: 38px;
 		border:none;
 		&__wrap{
 			padding:0;
 		}
 		&__item-person{
+			margin-top: 0;
+			margin-bottom: 25px;
 			justify-content:flex-start;
+			&:last-of-type{
+            	margin-top: 0;
+        	}
 		}
 		&__person-name{
 			width:93%;
 			flex-direction: row;
+			input[type="text"]{
+				margin-bottom: 20px;
+			}
 		}
 		&__last-name,
 		&__first-name,
@@ -157,7 +180,6 @@
 		}
 	}
 	.attraction{
-		padding-bottom:60px;
 		border:none;
 		&__wrap{
 			padding:0;
@@ -165,6 +187,9 @@
 		&__title{
 			margin:0;
 			.line-text();
+			&:after{
+				top: -23px;
+			}
 		}
 		&__list{
 			flex-direction: row;
@@ -174,6 +199,7 @@
 		}
 		&__item{
 			width:35.2%;
+			margin-bottom: 30px;
 			}
 		&__item:nth-of-type(1){
 				order:1;
@@ -189,6 +215,7 @@
 			}
 		}
 	.images{
+		margin-bottom: 124px;
 		&__wrap{
 			padding:0;
 			position:relative;
@@ -199,7 +226,7 @@
 			margin-bottom:60px;
 		}
 		&__btn-download{
-    		margin-bottom: 88px;
+    		margin-bottom: 82px;
     		width: 458px;
 		}
 		&__drag-photos{
@@ -225,7 +252,7 @@
 			}
 			p{
 				display: block;
-				margin-top: 20px;
+				margin-top: 10px;
 			}
 		}
 		&__close-link{
@@ -259,6 +286,19 @@
 	.container{
 		min-width:@width-desktop-content;
 	}
+
+	.card{
+		&__main-logo-form{
+			margin-bottom: 62px;
+		}
+	}
+
+	.main-page-header{
+		&__wrap{
+			padding:71px 0 55px 0;
+		}
+	}
+
     .form-review{
     	&__wrap{
     		padding: 0 10%;
@@ -305,15 +345,26 @@
     		span{
     			display:block;
     		}
+    	&__control{
+    		width: auto;
+    		}
     	}
     }
+    .data-travel{
+    	padding-bottom: 35px;
+    }
     .attraction{
+    		padding-bottom:60px;
     	&__list{
     		justify-content: space-between;
     	}
     	&__item{
     		width: 21%;
+    		margin-bottom: 10px;
     	}
+    }
+    .images{
+    	margin-bottom:85px;
     }
     .images-block{
     	width: 988px;
