--- a/less/modal-window.less
+++ b/less/modal-window.less
@@ -15,7 +15,7 @@
 	    right: 0;
 	    top: 0;
 	    margin: auto;
-		background:#ffffff;
+		background: @white-color;
 		box-shadow: 0px 0px 15px 7px rgba(0, 0, 0, 0.15);
 	            -webkit-box-shadow: 0px 0px 15px 7px rgba(0, 0, 0, 0.15);
 	            -moz-box-shadow: 0px 0px 15px 7px rgba(0, 0, 0, 0.15); 
@@ -41,7 +41,7 @@
 		    text-align: center;
 		    font-size: 21px;
 		    line-height: 26px;
-	    	color: @color-text;
+	    	color: @white-color;
 	    	background:@blue-color;
 	    	.btn();
 		}
@@ -56,7 +56,7 @@
 	    right: 0;
 	    top: 0;
 	    margin: auto;
-		background:#ffffff;
+		background: @white-color;
 		box-shadow: 0px 0px 15px 7px rgba(0, 0, 0, 0.15);
 	            -webkit-box-shadow: 0px 0px 15px 7px rgba(0, 0, 0, 0.15);
 	            -moz-box-shadow:0px 0px 15px 7px rgba(0, 0, 0, 0.15); 
@@ -84,7 +84,7 @@
 			    text-align: center;
 			    font-size: 21px;
 			    line-height: 26px;
-		    	color: @color-text;
+		    	color: @white-color;
 		    	background:@blue-color;
 		    	.btn();
 			}
