--- a/less/variables.less
+++ b/less/variables.less
@@ -1,13 +1,16 @@
 @width-mobile-content: 320px;
 @width-tablet-content: 768px;
 @width-desktop-content: 1200px;
+
 @width-logo:68px;
 @height-logo:56px;
+
 @blue-color: rgba(129,179,210,1);
-@color-menu-link:rgba(255,255,255,1);
-@color-main-text:rgba(0, 0, 0,1);
+@white-color: rgba(255,255,255,1);
+@black-color: rgba(0, 0, 0,1);
+
 @color-link:rgba(0, 0, 0,1);
-@color-text:rgba(255,255,255,1);
 @color-reasons:#eeeeee;
-@main-background:rgba(255,255,255,1);
+@color-border: #cccccc;
+
 @transition-hover:1s ease all;
