Выполнен module9-task1

--- a/less/media-index.less
+++ b/less/media-index.less
@@ -94,10 +94,10 @@
 	        
 	        img{
 	            position: relative;
-	            display: inline;
-	            top: 50%;
-	            transform: translateY(-50%);
-	        	  
+	        	display: inherit;
+			    top: 50%;
+			    transform: translateY(-50%);
+			    width: 100%;  
 	        }
 		}
 	}
